--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "cummanity tool for get and found item in any campus",
   "main": "app.js",
   "scripts": {
-    "start": " node ./src/index.js"
+    "start": " node ./src/index.js",
+    "dev": " nodemon ./src/index.js"
   },
   "type": "module",
   "keywords": [
