--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.4",
     "mongoose-aggregate-paginate-v2": "^1.0.7",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.14",
+    "two-step-auth": "^1.1.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
