--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "concurrently": "^8.2.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dompurify": "^3.1.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsdom": "^24.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.4",
